--- a/public/reset.css
+++ b/public/reset.css
@@ -6,6 +6,9 @@
 *:focus {
 	outline: none;
 }
+* {
+	color: black;
+}
 html,
 body,
 div,
@@ -92,6 +95,7 @@ video {
 	border: 0;
 	font-size: 100%;
 	vertical-align: baseline;
+	text-decoration: none;
 }
 /* HTML5 display-role reset for older browsers */
 article,
